refactor: 组件名称变更 & 添加断点续传demo

--- a/src/locale/zh-cn.json
+++ b/src/locale/zh-cn.json
@@ -10,6 +10,8 @@
     "keWbUsAx3G3sQFcc6e60": "子页面一",
     "nbvW17gm2nTxwwRdOj9Z": "表单",
     "pZAw6rgPAsWmFf5mfvhI": "首页",
+    "sJmD6Q2OiCyJyiOsfxF": "文件上传",
+    "t_5i8aFpUp9E8zwTH3ig": "文件上传",
     "v7EtGnHupCoJ9cvAafy": "增删改查",
     "x_2IciI93yoEqi4uU0exd": "3D建模",
     "yLhswHUaHsIk5rmZ1Xy": "子页面二",
