feat: 页面路由变更

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -9,7 +9,11 @@
     "jaqjpDj0GvRpwNx0Bkdl0": "Sample page",
     "keWbUsAx3G3sQFcc6e60": "Subpage one",
     "nbvW17gm2nTxwwRdOj9Z": "form",
+    "odG0s1WbIlAy3mWqdT1ad": "document",
     "pZAw6rgPAsWmFf5mfvhI": "front page",
+    "s1XCyh11Qjakv1Da2VpA": "components",
+    "sJmD6Q2OiCyJyiOsfxF": "File upload",
+    "t_5i8aFpUp9E8zwTH3ig": "File upload",
     "v7EtGnHupCoJ9cvAafy": "Add, delete, modify and check",
     "x_2IciI93yoEqi4uU0exd": "3D modeling",
     "yLhswHUaHsIk5rmZ1Xy": "Subpage two",
