--- a/src/locale/zh-cn.json
+++ b/src/locale/zh-cn.json
@@ -9,7 +9,9 @@
     "jaqjpDj0GvRpwNx0Bkdl0": "示例页面",
     "keWbUsAx3G3sQFcc6e60": "子页面一",
     "nbvW17gm2nTxwwRdOj9Z": "表单",
+    "odG0s1WbIlAy3mWqdT1ad": "文件",
     "pZAw6rgPAsWmFf5mfvhI": "首页",
+    "s1XCyh11Qjakv1Da2VpA": "组件",
     "sJmD6Q2OiCyJyiOsfxF": "文件上传",
     "t_5i8aFpUp9E8zwTH3ig": "文件上传",
     "v7EtGnHupCoJ9cvAafy": "增删改查",
