--- a/src/locale/zh-tw.json
+++ b/src/locale/zh-tw.json
@@ -9,7 +9,11 @@
     "jaqjpDj0GvRpwNx0Bkdl0": "範例頁面",
     "keWbUsAx3G3sQFcc6e60": "子頁面一",
     "nbvW17gm2nTxwwRdOj9Z": "表單",
+    "odG0s1WbIlAy3mWqdT1ad": "文件",
     "pZAw6rgPAsWmFf5mfvhI": "首頁",
+    "s1XCyh11Qjakv1Da2VpA": "組件",
+    "sJmD6Q2OiCyJyiOsfxF": "文件上傳",
+    "t_5i8aFpUp9E8zwTH3ig": "文件上傳",
     "v7EtGnHupCoJ9cvAafy": "增刪改查",
     "x_2IciI93yoEqi4uU0exd": "3D建模",
     "yLhswHUaHsIk5rmZ1Xy": "子頁面二",
