feat: 页面布局调整

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1,20 +1,20 @@
 {
-    "16Egj6Vr1l9HmCaeDuKzy": "description column",
+    "16Egj6Vr1l9HmCaeDuKzy": "Description column",
     "532slvgU3F9qhxfZ2yVfw": "Subpage",
-    "7m_3svGlMlsuBJbhScLz": "map",
+    "7m_3svGlMlsuBJbhScLz": "Map",
     "a42ztkHel2fc9gO5iuhCc": "Table columns",
     "f8bHnwHMh7iUPpn5W1fjK": "Rich text editor",
-    "ie5cDkag4HaOo6AMuo9a": "drop down",
+    "ie5cDkag4HaOo6AMuo9a": "Drop down",
     "jVEkL1PywXko1Bmb6sgC": "File preview",
     "jaqjpDj0GvRpwNx0Bkdl0": "Sample page",
     "keWbUsAx3G3sQFcc6e60": "Subpage one",
-    "nbvW17gm2nTxwwRdOj9Z": "form",
-    "odG0s1WbIlAy3mWqdT1ad": "document",
-    "pZAw6rgPAsWmFf5mfvhI": "front page",
-    "s1XCyh11Qjakv1Da2VpA": "components",
+    "nbvW17gm2nTxwwRdOj9Z": "Form",
+    "odG0s1WbIlAy3mWqdT1ad": "Document",
+    "pZAw6rgPAsWmFf5mfvhI": "Front page",
+    "s1XCyh11Qjakv1Da2VpA": "Components",
     "sJmD6Q2OiCyJyiOsfxF": "File upload",
     "t_5i8aFpUp9E8zwTH3ig": "File upload",
-    "v7EtGnHupCoJ9cvAafy": "Add, delete, modify and check",
+    "v7EtGnHupCoJ9cvAafy": "Curd",
     "x_2IciI93yoEqi4uU0exd": "3D modeling",
     "yLhswHUaHsIk5rmZ1Xy": "Subpage two",
     "ykN48J3gPiQaRfBOhoBod": "Welcome to the smart platform!",
